@@ -5,6 +5,9 @@
 	(db_disasm): Decode operands for Iba case.
 	* i386/i386/db_interface.c (db_read_bytes): Do not increment the
 	address before printing it.
+	* include/sys/types.h (int8_t, uint8_t, u_int8_t, int16_t, uint16_t,
+	u_int16_t, int32_t, uint32_t, u_int32_t, int64_t, uint64_t,
+	u_int64_t): New types.
 
 2008-07-15  Barry deFreese  <bddebian@comcast.net>
 
